<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:id="@+id/update_data_page"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="10dp">

    <TextView

        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:text="Your Previous data"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        android:gravity="center"/>
</androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Date  :"
                    android:textColor="@color/black"
                    android:textSize="17dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/dateid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="2023-06-16"
                    android:textColor="@color/black"
                    android:textIsSelectable="true"
                    android:textSize="17dp"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Time  :"
                    android:textColor="@color/black"
                    android:textSize="17dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/timeid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="8.53 pm"
                    android:textColor="@color/black"
                    android:textSize="17dp" />

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Systolic pressure  :"
                android:textColor="@color/black"
                android:textSize="17dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sytolicid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="120 mm Hg"
                android:textColor="@color/black"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Diastolic pressure:"
                android:textColor="@color/black"
                android:textSize="17dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/diastolicid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="80 mm Hg"
                android:textColor="@color/black"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Heart Rate:"
                android:textColor="@color/black"
                android:textSize="17dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/heartid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="80 mm Hg"
                android:textColor="@color/black"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Comments:"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/comid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="9dp"
                android:text="good"
                android:textColor="#0004FF"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/syseditid"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/edit_text_background_stroke"
        android:digits="0123456789"
        android:hint="Systolic pressure in mm Hg"
        android:inputType="number"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/dyaeditid"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_background_stroke"
        android:digits="0123456789"
        android:hint="Diastolic pressure in mm Hg"
        android:inputType="number"
        android:paddingLeft="20dp"
        android:paddingRight="10dp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/hearteditid"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_background_stroke"
        android:digits="0123456789"
        android:hint="heart rate in beats per minute"
        android:inputType="number"
        android:paddingLeft="20dp"
        android:paddingRight="10dp"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/dataeditid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_background"
        android:text="Edit Measurement"
        android:textColor="@color/white"
        />

</LinearLayout>