<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:layout_marginTop="20dp"
    android:layout_marginRight="15dp"
    android:layout_marginBottom="20dp"
    android:orientation="horizontal"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    android:id="@+id/cardview_of_data"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"

            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Date: "
                        android:textColor="@color/black"
                        android:textSize="17dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/dateid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:text="2023-06-16"
                        android:textColor="@color/black"
                        android:textSize="15dp"
                        android:background="@drawable/textview_background"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textIsSelectable="true"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="50dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Time: "
                        android:textColor="@color/black"
                        android:textSize="17dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/timeid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:text="8.53 pm"

                        android:textColor="@color/black"
                        android:textSize="15dp"
                        android:background="@drawable/textview_background"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"/>

                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal"
 >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Systolic pressure: "
                    android:textColor="@color/black"
                    android:textSize="17dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sytolicid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="120 mm Hg"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:background="@drawable/textview_background"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal"
 >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Diastolic pressure: "
                    android:textColor="@color/black"
                    android:textSize="17dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/diastolicid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="80 mm Hg"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:background="@drawable/textview_background"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Heart Rate: "
                    android:textColor="@color/black"
                    android:textSize="17dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/heartid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="80 mm Hg"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:background="@drawable/textview_background"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Comments: "
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/comid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="good"
                    android:textColor="#0004FF"
                    android:textSize="18dp"
                    android:background="@drawable/textview_background"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/editdataid"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/black"
                    android:src="@drawable/baseline_edit_note_24"
                    android:contentDescription="TODO" />

                <ImageButton
                    android:id="@+id/deletedaytaid"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/red"
                    android:src="@drawable/baseline_delete_forever_24"
                    android:contentDescription="TODO" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>